@@ -1,3 +1,9 @@
+2006-06-07 Richard Frith-Macdonald  <rfm@gnu.org>
+
+	* GSCache.h:
+	* GSCache.m:
+	New convenience method to cache an item until a date.
+
 2006-01-11  Nicola Pero <nicola@brainstorm.co.uk>
 
 	* GNUmakefile.wrapper.objc.preamble: New file that fixes the
